# cfbd-mcp-server-with-remote

./: .gitignore  README.md  claude_desktop_config.json  dotenv_example  pyproject.toml
src/cfbd/: sample.env
src/cfbd_mcp_server/: anthropic_server.py  cfbd_schema.py  event_store.py  schema_helpers.py  server.py
