[project]
name = "cfbd-mcp-server"
version = "0.4.0"
description = "Interact with the College Football Data API via the Claude Desktop."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
 "mcp>=1.1.2",
 "python-dotenv>=1.0.1",
]
[[project.authors]]
name = "Chris Leonard"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
cfbd-mcp-server = "cfbd_mcp_server:main"
